fantoma se planque dans le chapitre 20...

--- a/public/epub_content/Unlike-us/OEBPS/css/unlike-us-reader-sophie.css
+++ b/public/epub_content/Unlike-us/OEBPS/css/unlike-us-reader-sophie.css
@@ -9,7 +9,18 @@ p .tweet {
 }
 
 body:hover .tweet {
-	color: red;
+	color: blue;
 	transition: 2s;
 	transition-delay:2s;
+}
+
+
+.fantoma {   
+    color: green;
+    transition: 5s;   
+}
+
+.fantoma:hover  {   
+    color: transparent;
+    transition: 5s;   
 }
