--- a/public/css/readium_buttons.css
+++ b/public/css/readium_buttons.css
@@ -61,3 +61,47 @@
 *#epub-demo-library:hover {
   background: transparent url('../images/ico_menu_over.png') center top no-repeat;
 }
+
+*#friendMeter {
+  visibility : hidden;
+}
+
+*#friendMeter-bar {
+  background-color: #3b5998;
+  width: 98%;
+  height: 5px;
+  padding: 0;
+  overflow: hidden;
+  display: block;
+  position: absolute;
+  top: 97%;
+  margin-right: 50px;
+  z-index:100;
+}
+
+*#friendMeter-counter {
+  background: transparent url('../images/friendMeter_counter.png') center top no-repeat;
+  left: 0;
+  min-width: 28px;
+  min-height: 28px;
+  width: 28px;
+  height: 28px;
+  margin-top: -14px;
+  margin-left: 10px;
+  padding: 0;
+  overflow: hidden;
+  display: block;
+  position: absolute;
+  top: 97%;
+  left: 0px;
+  z-index:100;
+}
+
+*#friendMeter-counter-font{
+  font-size: 20px;
+  font-weight: 900;
+  color: white;
+  margin-top: 3px;
+  margin-left: 7px;
+  z-index:200;
+}
