--- a/public/epub_content/myPoem/OEBPS/Style/style.css
+++ b/public/epub_content/myPoem/OEBPS/Style/style.css
@@ -1,6 +1,10 @@
 @charset "utf-8";
 
-h1{font-family:"GillSans";}
-h1.center{text-align:center;}
+body{margin:0; margin-top:100px; padding:0;}
 
-img.center, audio.center{display:block; margin-left:auto; margin-right:auto;}
+img{margin:0; hight:100%;}
+
+img.center{display:block; margin-left:auto; margin-right:auto;}
+
+h1{font-family:"AmericanTypewriter", "Avenir-Book", "sans-serif";}
+h1{font-size:36px; text-align:center;}
