--- a/public/css/readium_buttons.css
+++ b/public/css/readium_buttons.css
@@ -97,7 +97,36 @@
   z-index:100;
 }
 
-*#friendMeter-counter-font{
+*#friendMeter-counter-text{
+  font-size: 20px;
+  font-weight: 900;
+  color: white;
+  margin-top: 3px;
+  margin-left: 7px;
+  z-index:200;
+}
+
+*#friendMeter-friendData {
+  background: transparent url('../images/friendMeter_friendData.png') center top no-repeat;
+  left: 0;
+  min-width: 300px;
+  min-height: 200px;
+  width: 300px;
+  height: 200px;
+  margin-top: -60px;
+  margin-left: 10px;
+  padding: 0;
+  overflow: hidden;
+  display: block;
+  position: absolute;
+  top: 97%;
+  left: 0px;
+  z-index:100;
+  opacity:0;
+  transition: opacity 0.5s linear;
+}
+
+*#friendMeter-friendData-text {
   font-size: 20px;
   font-weight: 900;
   color: white;
