--- a/public/css/readium_buttons.css
+++ b/public/css/readium_buttons.css
@@ -1,136 +1,162 @@
 .icon48 {
-  width: 48px;
-  height: 48px;
-  margin: 0;
-  padding: 0;
+	width: 48px;
+	height: 48px;
+	margin: 0;
+	padding: 0;
 }
 
 .page-switch-overlay-icon {
-  min-width: 52px;
-  min-height: 95px;
-  width: 52px;
-  height: 95px;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  display: block;
-  position: absolute;
-  top: 50%;
+	min-width: 52px;
+	min-height: 95px;
+	width: 52px;
+	height: 95px;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	display: block;
+	position: absolute;
+	top: 50%;
 }
 
 *#readium-logo {
-  background: transparent url('../images/ico_readium_up.png') center top no-repeat;
+	background: transparent url('../images/ico_readium_up.png') center top no-repeat;
 }
 *#readium-logo:hover {
-  background: transparent url('../images/ico_readium_over.png') center top no-repeat;
+	background: transparent url('../images/ico_readium_over.png') center top no-repeat;
 }
 
 *#previous-page-btn {
-  background: transparent url('../images/pagination_previous_up.png') center top no-repeat;
-  left: 0;
+	background: transparent url('../images/pagination_previous_up.png') center top no-repeat;
+	left: 0;
 }
 *#previous-page-btn:hover {
-  background: transparent url('../images/pagination_previous_over.png') center top no-repeat;
+	background: transparent url('../images/pagination_previous_over.png') center top no-repeat;
 }
 
 *#next-page-btn {
-  background: transparent url('../images/pagination_next_up.png') center top no-repeat;
-  right: 0;
+	background: transparent url('../images/pagination_next_up.png') center top no-repeat;
+	right: 0;
 }
 *#next-page-btn:hover {
-  background: transparent url('../images/pagination_next_over.png') center top no-repeat;
+	background: transparent url('../images/pagination_next_over.png') center top no-repeat;
 }
 
 .synthetic-page-ico {
-  background: transparent url('../images/ico_doublepage_up.png') center top no-repeat;
+	background: transparent url('../images/ico_doublepage_up.png') center top no-repeat;
 }
 .synthetic-page-ico:hover {
-  background: transparent url('../images/ico_doublepage_over.png') center top no-repeat;
+	background: transparent url('../images/ico_doublepage_over.png') center top no-repeat;
 }
 
 .single-page-ico {
-  background: transparent url('../images/ico_singlepage_up.png') center top no-repeat;
+	background: transparent url('../images/ico_singlepage_up.png') center top no-repeat;
 }
 .single-page-ico:hover {
-  background: transparent url('../images/ico_singlepage_over.png') center top no-repeat;
+	background: transparent url('../images/ico_singlepage_over.png') center top no-repeat;
 }
 
 *#epub-demo-library {
-  background: transparent url('../images/ico_menu_up.png') center top no-repeat;
+	background: transparent url('../images/ico_menu_up.png') center top no-repeat;
 }
 *#epub-demo-library:hover {
-  background: transparent url('../images/ico_menu_over.png') center top no-repeat;
+	background: transparent url('../images/ico_menu_over.png') center top no-repeat;
 }
 
 *#friendMeter {
-  visibility : hidden;
+	visibility : hidden;
 }
 
 *#friendMeter-bar {
-  background-color: #3b5998;
-  width: 98%;
-  height: 5px;
-  padding: 0;
-  overflow: hidden;
-  display: block;
-  position: absolute;
-  top: 97%;
-  margin-right: 50px;
-  z-index:100;
+	background-color: #3b5998;
+	width: 98%;
+	height: 5px;
+	padding: 0;
+	overflow: hidden;
+	display: block;
+	position: absolute;
+	top: 97%;
+	margin-right: 50px;
+	z-index:100;
 }
 
 *#friendMeter-counter {
-  background: transparent url('../images/friendMeter_counter.png') center top no-repeat;
-  left: 0;
-  min-width: 28px;
-  min-height: 28px;
-  width: 28px;
-  height: 28px;
-  margin-top: -14px;
-  margin-left: 10px;
-  padding: 0;
-  overflow: hidden;
-  display: block;
-  position: absolute;
-  top: 97%;
-  left: 0px;
-  z-index:100;
+	background: transparent url('../images/friendMeter_counter.png') center top no-repeat;
+	left: 0;
+	min-width: 28px;
+	min-height: 28px;
+	width: 28px;
+	height: 28px;
+	margin-top: -14px;
+	margin-left: 10px;
+	padding: 0;
+	overflow: hidden;
+	display: block;
+	position: absolute;
+	top: 97%;
+	left: 0px;
+	z-index:100;
 }
 
 *#friendMeter-counter-text{
-  font-size: 20px;
-  font-weight: 900;
-  color: white;
-  margin-top: 3px;
-  margin-left: 7px;
-  z-index:200;
+	font-size: 20px;
+	font-weight: 900;
+	color: white;
+	margin-top: 3px;
+	margin-left: 7px;
+	z-index:200;
 }
 
 *#friendMeter-friendData {
-  background: transparent url('../images/friendMeter_friendData.png') center top no-repeat;
-  left: 0;
-  min-width: 300px;
-  min-height: 200px;
-  width: 300px;
-  height: 200px;
-  margin-top: -60px;
-  margin-left: 10px;
-  padding: 0;
-  overflow: hidden;
-  display: block;
-  position: absolute;
-  top: 97%;
-  left: 0px;
-  z-index:100;
-  opacity:0;
-  transition: opacity 0.5s linear;
+	background: transparent url('../images/friendMeter_friendData.png') center top no-repeat;
+	left: 0;
+	min-width: 300px;
+	min-height: 200px;
+	width: 300px;
+	height: 200px;
+	margin-top: -60px;
+	margin-left: 10px;
+	padding: 0;
+	overflow: hidden;
+	display: block;
+	position: absolute;
+	top: 97%;
+	left: 0px;
+	z-index:100;
+	opacity:0;
+	transition: opacity 0.5s linear;
 }
 
 *#friendMeter-friendData-text {
-  font-size: 20px;
-  font-weight: 900;
-  color: white;
-  margin-top: 3px;
-  margin-left: 7px;
-  z-index:200;
+	font-size: 20px;
+	font-weight: 900;
+	color: white;
+	margin-top: 3px;
+	margin-left: 7px;
+	z-index:200;
 }
+
+#FB_login{
+	position: absolute;
+	display: block;
+	top: 50%;
+	left: 50%;
+	visibility: visible;
+}
+
+#FB_logout{
+	background: transparent url('../images/fb-Logout.png') left top no-repeat;
+	position: absolute;
+	display: block;
+	top: 30%;
+	left: 75px;
+	width: 72px;
+	height: 21px;
+	visibility: hidden;
+	border: none;
+}
+
+#readiumContainer{
+	display: none;
+}
+
+
