--- a/public/epub_content/Cadavreexquis2/OEBPS/Style/style.css
+++ b/public/epub_content/Cadavreexquis2/OEBPS/Style/style.css
@@ -1,11 +1,10 @@
+/*Cadavre Exquis*/
 @charset "utf-8";
 
-body{margin:0; margin-top:100px; padding:0;
-font-size: 16px; line-height: 16px;}
+body{width:512px; height:748px; margin:0; background-repeat:no-repeat; background-size:contain;}
 
-img{margin:0; hight:100%;}
 
-img.center{display:block; margin-left:auto; margin-right:auto;}
+img{display:block; position:absolute; margin:0;}
+#fullsize{top:0; left:0; width:512px; height:748px;}
 
-h1{font-family:"AmericanTypewriter", "Avenir-Book", "sans-serif";}
-h1{text-align:center;}
+span{font-family:"AmericanTypewriter", "Avenir-Book", "sans-serif";}
