--- a/public/epub_content/Cadavreexquis2/OEBPS/Style/style.css
+++ b/public/epub_content/Cadavreexquis2/OEBPS/Style/style.css
@@ -6,5 +6,14 @@ body{width:512px; height:748px; margin:0; background-repeat:no-repeat; backgroun
 
 img{display:block; position:absolute; margin:0;}
 #fullsize{top:0; left:0; width:512px; height:748px;}
+#exit{top:0; left:0; width:60px; height:60px;}
+
+@font-face{font-family:Bebas; src:url(../Font/BEBAS.ttf)format(truetype);}
+@font-face{font-family:BigMummy; src:url(../Font/BigMummy.ttf)format(truetype);}
+@font-face{font-family:Diplomata; src:url(../Font/Diplomata.ttf)format(truetype);}
+@font-face{font-family:OldStandard; src:url(../Font/OldStandard.ttf)format(truetype);}
+@font-face{font-family:Rye; src:url(../Font/Rye.ttf)format(truetype);}
+@font-face{font-family:Stencilia; src:url(../Font/Stencilia.ttf)format(truetype);}
+@font-face{font-family:UnicaOne; src:url(../Font/UnicaOne.ttf)format(truetype);}
 
 span{font-family:"AmericanTypewriter", "Avenir-Book", "sans-serif";}
