Petit aperçu d'OpenSauce

--- a/public/epub_content/OpenSauce/EPUB/styles/style.css
+++ b/public/epub_content/OpenSauce/EPUB/styles/style.css
@@ -39,3 +39,17 @@ a.noteref {
 *[epub|type~='dedication'] {
     padding-left: 2em;
 }
+
+.cellule {
+    position: relative;
+    float:left;
+}
+
+.cellule img {
+    position: absolute;
+    
+}
+
+#cell1bis {
+    display: none;
+}
