Why does this not work in the iPad?

--- a/public/epub_content/OpenSauce/EPUB/styles/style.css
+++ b/public/epub_content/OpenSauce/EPUB/styles/style.css
@@ -42,7 +42,7 @@ a.noteref {
 
 .cellule {
     position: relative;
-    float:left;
+    float:right;
 }
 
 .cellule img {
@@ -50,6 +50,6 @@ a.noteref {
     
 }
 
-#cell1bis {
+.bis {
     display: none;
 }
