iBooks doesn’t like position absolute;

--- a/public/epub_content/OpenSauce/EPUB/styles/style.css
+++ b/public/epub_content/OpenSauce/EPUB/styles/style.css
@@ -42,13 +42,11 @@ a.noteref {
 }
 
 .cellule {
-    position: relative;
     float:right;
 }
 
-.cellule img {
-    position: absolute;
-    
+img {
+    display: block;
 }
 
 .bis {
