--- a/public/css/readium_buttons.css
+++ b/public/css/readium_buttons.css
@@ -108,11 +108,15 @@
 }
 
 *#friendMeter-counter-text{
-	font-size: 20px;
-	font-weight: 900;
-	color: white;
-	margin-top: 3px;
-	margin-left: 7px;
+	position: absolute;
+	top: 100%;
+	left: 48px;
+	margin-top: -30px;
+	width: 100px;
+	height: 20px;
+	font-size: 18px;
+	font-weight: 400;
+	color: #3b5998;
 	z-index:200;
 }
 
