--- a/public/epub_content/clementcoubes/EPUB/styles/ground-zero.css
+++ b/public/epub_content/clementcoubes/EPUB/styles/ground-zero.css
@@ -7,13 +7,16 @@ body {
     margin-right: 16em;
     color: black;   
     font-family: 'Balthazar', serif;
-    background-color: rgb(255,255,245);
+    background-color: rgb(242,242,242);
     line-height: 1.5em;
 }
 
 h1 {
-    margin-top: 8em;
-    margin-bottom: 2em;
+margin-left: -0.5em;
+font-family: 'Droid Sans Mono', sans-serif;
+font-size: 5em;
+   
+line-height: 1.5em;
 }
 
 h2 {
@@ -25,6 +28,16 @@ h3 {
     margin-top: 3em;
 }
 
+
+.bandeau
+{
+position: center;
+bottom:10px;
+}
+
+span.ad  {
+    font-weight: bold;
+}
 
 span.lnum {
     float: right;
