--- a/public/epub_content/salpetriere/EPUB/styles/style.css
+++ b/public/epub_content/salpetriere/EPUB/styles/style.css
@@ -53,6 +53,11 @@ a.noteref {
     margin-right:30%;
 }
 
+.tytulowa {
+    
+    margin-top:35%;
+   
+}
 
 p.dropcap:first-letter {
     float: left;
