--- a/public/epub_content/Cadavreexquis2/OEBPS/Style/style.css
+++ b/public/epub_content/Cadavreexquis2/OEBPS/Style/style.css
@@ -13,9 +13,11 @@ img{display:block; position:absolute; margin:0;}
 @font-face{font-family:lmmonoltcondRegular; src:url(../Font/lmmonoltcondRegular.otf)format(opentype);}
 @font-face{font-family:lmmonoltcondOblique; src:url(../Font/lmmonoltcondOblique.otf)format(opentype);}
 
-span{font-family:"AmericanTypewriter", "Avenir-Book", "sans-serif";}
+span.box{width:412px; height:452px;}
+span{font-family:"lmmonoltcondRegular", "sans-serif";}
 span{font-size:50px;}
 #myName{font-size:24px;}
+#explication{font-size:18px; text-align:justify; text-justify:inter-ideograph;}
 
 #poemTwo{-webkit-transform:rotateY(180deg);
 			-moz-transform:rotateY(180deg);
